0000 - Restructure file to use webpack

--- a/src/HTML/Main.html
+++ b/src/HTML/Main.html
@@ -3,17 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>React Examples</title>
+
+        <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
+        <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+
+        <script
+            src="https://unpkg.com/@babel/standalone/babel.min.js">
+        </script>
     </head>
     <body>
         <div class="react-container"></div>
-        <!-- React Library & React DOM -->
-        <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
-        <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
-        <!-- Babel -->
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.29/browser.js">
-        </script>
-
-        <script type="text/babel"></script>
     </body>
 </html>
