0000 - Finish webpack config

--- a/src/HTML/Main.html
+++ b/src/HTML/Main.html
@@ -3,15 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>React Examples</title>
-
-        <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
-        <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
-
         <script
             src="https://unpkg.com/@babel/standalone/babel.min.js">
         </script>
     </head>
     <body>
-        <div class="react-container"></div>
+        <div id="react-container"></div>
+        <script src="/dist/assets/bundle.js"></script>
     </body>
 </html>
